ZF-760 Driver Can Acknowledge Task Failure
